# braske-plan

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
app/: README.md  package.json  pnpm-lock.yaml  styles.css  vite.config.js
app/src/: main.js  ui-shell.js
app/tests/: index.js
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/planner/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/planner/migrations/: 0001_initial.py
backend/tests/: test_planner_api.py
docs/: architecture.md  backlog.md  derived_baseboard_snapshot.md  drawing_model.md  lighting_model_v1.md  open_source_3d_references.md  plan_model_v0.md  roadmap.md  room_wall_contact_model_v1.md  wall_piece_and_shared_boundary_spec.md
docs/discussions/: 2026-03-02_loc_refactor_options.md  2026-03-02_quote-model-v2_estimate-grouping-and-pricing-catalog.md  2026-03-04_codex_tools_setup_tutorial.md
scripts/: fill_room_rectangles.py
tracker/sprints/: S001_2026-02-25_to_2026-03-04_kickoff.md  S002_2026-02-26_to_2026-03-05_trace-and-resume.md  S003_2026-02-26_to_2026-03-05_calibration-confidence-and-snap-fix.md  S004_2026-02-26_to_2026-03-05_dimensions-and-validation.md  S005_2026-03-05_to_2026-03-12_perimeter-foundation.md  S006_2026-02-28_to_2026-03-07_baseboard-rules-and-repro.md  S007_2026-03-01_to_2026-03-08_room-inventory-and-pricing-prep.md  S009_2026-03-02_to_2026-03-09_quote-model-v2-and-visual-controls.md
tracker/tickets/: T-0003_autosave-and-reopen.md  (+35 more)
(+27 files in other folders)
