[project]
name = "braske-plan-backend"
version = "0.1.0"
description = "Django backend for Braske Plan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=5.1,<5.2",
  "djangorestframework>=3.15,<3.16",
  "psycopg[binary]>=3.2,<3.3",
  "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.9,<5",
  "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

